--- a/Entregables/Sprint1/compra.html
+++ b/Entregables/Sprint1/compra.html
@@ -24,15 +24,15 @@
         <h1> Orden de Compra</h1>
         
             <label for="">Cantidad de computadores</label> <br>
-            <input  class="cantidad-comp"> <br>
-            <button class="boton"> Calcular </button> <br>
+            <input  id ='cantidad-comp'> <br>
+            <button onclick="calculo()"> Calcular </button> <br>
             <label for=""> Valor de compra</label> <br>
-            <input  class="valor-compra"> <br>
+            <input  id ="valor-compra"> <br>
             <label for=""> Valor de descuento</label> <br>
-            <input  class="valor-descuento"> <br>
+            <input id ="valor-descuento"> <br>
             <label for="">Total a pagar</label> <br>
-            <input class="total"> <br>
-            <input class="alerta"> <br>
+            <input id ="total"> <br>
+            <input id ="alerta"> <br>
             <script src="./script.js"></script>
 
     </main>
