--- a/Entregables/Sprint1/index.html
+++ b/Entregables/Sprint1/index.html
@@ -27,19 +27,19 @@
 
         <table class="tabla" border="1">
             <tr>
-                <th> Computador 1 </td>
-                <td> Computador 2 </td>
-                <td> Computador 3</td>
+                <td> Computador disponible </td>
+                <td> Especificaciones </td>
+                <td> Precio </td>
             </tr>
             <tr>
-                <td>Especificaciones </td>
-                <td> Especificaciones</td>
-                <td>Especificaciones </td>
+                <td class = 'colum' align="center"> <img src=" https://www.alkomprar.com/medias/195122918965-001-310Wx310H?context=bWFzdGVyfGltYWdlc3wzMDIxMHxpbWFnZS9qcGVnfGltYWdlcy9oY2MvaGI3LzEwMDMyODI5OTU2MTI2LmpwZ3w3NjcwMTA0M2IwYmUzZWQ4ZTVhZTRlOWE1NTY1N2VlZWRkOTdmOWU1ZmIzZDhhOTYxMjE4ZDI2NzQzZDViODll" alt=""></td>
+                <td> Especificaciones: Computador de mesa 20" Pulgadas  Intel Pentium- 4 GB RAM- Disco Duro 500GB-Negro</td>
+                <td> 820.000 COP </td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td> <img  src="https://media.istockphoto.com/photos/laptop-with-blank-screen-on-table-in-office-loft-interior-building-picture-id1128886108?b=1&k=6&m=1128886108&s=170667a&w=0&h=KsOIsSD1aeCv8y5By2h2xJz2Pq-TPyBuELUfZYq9_Jo=" alt=""></td>
+                <td>Especificaciones: Computador portatil 24" Pulgadas Intel Corei5 8GB RAM Disco Estado Solido 256 GB - Blanco</td>
+                <td>820.000 COP</td>
             </tr>
 
         </table>
@@ -48,7 +48,7 @@
     </main>
 
     <footer class="pie-pagina">
-
+        <p> Todos los derechos reservados </p>
     </footer>
 </body>
 </html>
