Actualizacion-campo-entrenamiento

--- a/Campo_entrenamiento/Modulo1/02-HTMLBasico/Tarea1/index.html
+++ b/Campo_entrenamiento/Modulo1/02-HTMLBasico/Tarea1/index.html
@@ -7,16 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <title> Modulo1-O1T1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <nav class = 'navegador'>
+        <a href="index.html"> Inicio </a>
+        <br>
+        <a href="menu.html"> Platos disponibles </a>
+    
+    </nav>
     <div class="container">
-        <header>
+        <header class =  'cabecera'>
             <h1> Restaurante el horno</h1>
         </header>
-        <nav>
-            <a href="index.html"> Inicio </a>
-        </nav>
+
         <main>
             <h1 class="title">
                 Restaurante "El horno"
@@ -30,10 +38,27 @@
             </p>
 
         </main>
+        <article>
+            <h1> Los platos mas reconocidos son los siguientes</h1>
+            <p> </p>
+            <p></p>
+    
+            <aside class="link">
+                <h3></h3>
+                <ul>
+                    <li><a href="menu.html">Plato 1</a></li>
+                    <li><a href="menu.html">Plato 2</a></li>
+                    <li><a href="menu.html">Plato 3</a></li>
+                </ul>
+            </aside>
+        </article>
 
-        <aside>
-
-        </aside>
+        <footer class="piepagina">
+            <br>
+            <br>
+            <br>
+            <p> Todos los derechos reservados - copyright - © 2021</p>
+        </footer>
 
 
     </div>
