--- a/Entregables/Reto7_ConversorRomanos/index.html
+++ b/Entregables/Reto7_ConversorRomanos/index.html
@@ -13,8 +13,10 @@
     </header>
     <main class="principal">
         <label for=""> Ingrese el numero decimal que desea convertir</label>
-        <button type="submit"> Calcular </button>
+        <input type="text" id="entrada">
+        <button type="submit" onclick=convertToRoman() > Calcular </button>
     
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
