--- a/Entregables/Reto6_Pagina Documentacion/index.html
+++ b/Entregables/Reto6_Pagina Documentacion/index.html
@@ -4,23 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Documentacion</title>
+    <title>Pagina Documentacion Tecnica</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <nav id="navbar">
-        <header> Colores de la biotecnologia </header>
-        <a href="#Biotecnologia_verde" class = "nav-link">Biotecnologia verde</a>
-        <a href="#Biotecnologia_azul" class = "nav-link">Biotecnologia azul</a>
-        <a href="#Biotecnologia_naranja" class = "nav-link">Biotecnologia naranja</a>
-        <a href="#Biotecnologia_blanca" class = "nav-link">Biotecnologia blanca</a>
-        <a href="#Biotecnologia_amarilla" class = "nav-link">Biotecnologia amarilla </a>
+        <header> Javascript </header>
+        <a href="#Variables" class = "nav-link"> Variables </a>
+        <a href="#Estructuras_secuenciales" class = "nav-link"> Estructuras secuenciales</a>
+        <a href="#Estructuras_condicionales" class = "nav-link"> Estructuras condicionales</a>
+        <a href="#Ciclos" class = "nav-link">Ciclos</a>
+        <a href="#Arreglos" class = "nav-link">Arreglos</a>
 
     </nav>
     <main id="main-doc">
-        <section class="main-section" id ="Biotecnologia_verde">
+        <section class="main-section" id ="Variables">
             <header>
-                Biotecnologia verde
+                Variables
+            </header>
+            <p> 
+                En Java-Script se usan los diferentes 
+            </p>
+            <p> 
+                
+            </p>
+            <ul>
+                <li>
+                    <code></code>
+                </li>
+            </ul>
+        </section>
+        <section class="main-section" id ="Estructuras_secuenciales">
+            <header>
+                Estructuras secuenciales
             </header>
             <p> 
 
@@ -34,9 +51,9 @@
                 </li>
             </ul>
         </section>
-        <section class="main-section" id ="Biotecnologia_azul">
+        <section class="main-section" id ="Estructuras_condicionales">
             <header>
-                Biotecnologia azul
+                Estructuras condicionales
             </header>
             <p> 
 
@@ -50,9 +67,9 @@
                 </li>
             </ul>
         </section>
-        <section class="main-section" id ="Biotecnologia_naranja">
+        <section class="main-section" id ="Ciclos">
             <header>
-                Biotecnologia naranja
+                Ciclos
             </header>
             <p> 
 
@@ -66,25 +83,9 @@
                 </li>
             </ul>
         </section>
-        <section class="main-section" id ="Biotecnologia_blanca">
+        <section class="main-section" id ="Arreglos">
             <header>
-                Biotecnologia blanca
-            </header>
-            <p> 
-
-            </p>
-            <p> 
-                
-            </p>
-            <ul>
-                <li>
-                    <code></code>
-                </li>
-            </ul>
-        </section>
-        <section class="main-section" id ="Biotecnologia_amarilla">
-            <header>
-                Biotecnologia amarilla
+                Arreglos
             </header>
             <p> 
 
