--- a/Entregables/Sprint1/index.html
+++ b/Entregables/Sprint1/index.html
@@ -47,7 +47,7 @@
 
     </main>
 
-    <footer class="pie-pagina">
+    <footer class="pie-pagina text-white">
         <p> Todos los derechos reservados </p>
     </footer>
 </body>
