--- a/Entregables/Reto6_Pagina Documentacion/index.html
+++ b/Entregables/Reto6_Pagina Documentacion/index.html
@@ -24,7 +24,7 @@
                 Variables
             </header>
             <p> 
-                En Java-Script se usan los diferentes 
+                Para Java-Script se pueden usar
             </p>
             <p> 
                 
