--- a/Front-End/Retos-Sprint1/Reto2_Formulario/index.html
+++ b/Front-End/Retos-Sprint1/Reto2_Formulario/index.html
@@ -48,18 +48,15 @@
                 <div class="carousel-inner">
                     <div id="imagen" class="carousel-item active">
                         <img class="d-block w-100"
-                            src="http://sinavef.senasica.gob.mx/CNRF/AreaDiagnostico/NotasCarrusel/Imagenes/nota5_Figura1.jpg"
+                            src="./images/imagen1.jpg"
                             alt="">
 
                     </div>
                     <div class="carousel-item">
-                        <img src="https://media.istockphoto.com/vectors/leaf-carousels-and-chemistry-lab-icons-set-world-money-methodology-vector-id1215016180"
+                        <img src="./images/image2.jpg"
                             class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item">
-                        <img src="https://media.istockphoto.com/vectors/leaf-carousels-and-chemistry-lab-icons-set-world-money-methodology-vector-id1187802031"
-                            alt="...">
-                    </div>
+
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                     data-bs-slide="prev">
