--- a/Front-End/Semana4/Tarea2408/gestionarProducto.html
+++ b/Front-End/Semana4/Tarea2408/gestionarProducto.html
@@ -31,8 +31,8 @@
             <input type="text" class="form-control" id="validationDefault04"  required>
           </div>
 
-          <label for="id" class="form-label"> Rin </label>
-          <input type="text" class="form-control" class="form-control" id="id" readonly>
+          <label for="id" class="form-label"> id </label>
+          <input type="text" class="form-control" class="form-control" id="id" >
 
           <div class="md-4">
             <label for="validationDefault02" class="form-label"> Material </label>
