--- a/Front-End/Semana4/Tarea2408/index.html
+++ b/Front-End/Semana4/Tarea2408/index.html
@@ -22,7 +22,7 @@
         Categoria Aluminio
     </button>
     <button id="filtro-fibra">
-        Categoria Fibra de vidrio
+        Categoria Fibra de carbono
     </button>
 
 
